# lint-python-action

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
lint_python/: __init__.py  __main__.py  __version__.py  constants.py  lint_python.py  main.py
